# jerseys

./: README.md  app.py  config.json  const.py  pyproject.toml
app/: azure.py  const.py  gpt_response.py  image.py  layer.py  shirt.py  textfield.py  utils.py
src/: azure.py  copy.py  errors.py  gpt_response.py  typing.py
tests/: test_image.py
